generalize tick method